# talk-to-your-cookbook

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: backend.yml  docs.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/database/: base.py  init_db.py  init_embedding_db.py  init_langgraph_db.py
backend/app/experimental/: classification_mock.py  ocr_mock_0.py  ocr_mock_1.py  segmentation_mock.py
backend/app/infra/: classification_simple.py  embedding_chunker_langchain.py  embeding_vectorstore_langchain.py  ocr_google.py  ocr_pytesseract.py  recipe_parser_mistral.py  recipe_parser_ollama.py  storage_local.py  thumbnail_pillow.py  validation_simple.py
backend/app/models/: chat.py  meal_plan.py  ocr.py  recent_recipe.py  recipe.py  shopping_list.py  user.py
backend/app/ports/: chunker.py  classification.py  embedding_store.py  ocr.py  recipe_parser_llm.py  segmentation.py  storage.py  thumbnail.py  validation.py
backend/app/repos/: book.py  chat_messages.py  chat_sessions.py  classification_record.py  image_repo.py  meal_plan.py  recipe.py  shopping_list.py  user.py
backend/app/routes/: api.py  auth.py  chat.py  embeddings.py  meal_plans.py  recipes.py  recipescanner.py  shopping_list.py  status.py  users.py
backend/app/schemas/: chat.py  embeddings.py  mappers.py  meal_plan.py  ocr.py  recipe.py  shopping_list.py  token.py  user.py
backend/app/services/: auth.py  embedding_service.py  image_ingest_service.py  shopping_list_service.py  text_or_image_simple.py  users.py
backend/app/workflows/: base_worker.py
backend/tests/: conftest.py
backend/tests/data/: google_vision_response.json  google_vision_response_1.json
backend/tests/system/: test_full_scan_workflow.py
backend/tests/unit/: .coveragerc  test_auth.py  test_users.py
backend/tools/: create_test_page.py  google_api_test.py  mistral_api_test.py  ollama_api_test.py
database/alembic/: env.py
database/backup/: backup_dev_db.sh  backup_prod_db.sh
docs/: architecture.md  components.md  database.md  embeddings.md  er.md  evaluation.md  index.md  ocr.md  openapi.html  openapi.json  rag.md  schemas.md  usage.md
docs/diagrams/: er.mmd
docs/diagrams/graphs/: chat_app.mmd  classification.mmd  segmentation.mmd
docs/diagrams/schemas/: all.mmd  chat.mmd  embeddings.mmd  mappers.mmd  meal_plan.mmd  ocr.mmd  recipe.mmd  shopping_list.mmd  token.mmd  user.mmd
docs/js/: mermaid-config.js
frontend/: .env  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
frontend/src/components/: AuthForm.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: userPreferences.tsx
tools/ci/: gen_er.py  gen_openapi.sh  gen_pipeline.py  gen_schemas.py  run_all_ci_tasks.sh
(+162 files in other folders)
